--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
-    "bootstrap-vue": "^2.0.0",
+    "@fortawesome/fontawesome-free": "^5.12.0",
+    "@nuxtjs/axios": "^5.3.6",
     "bootstrap": "^4.1.3",
-    "@nuxtjs/axios": "^5.3.6"
+    "bootstrap-vue": "^2.0.0",
+    "jquery": "^3.4.1",
+    "nuxt": "^2.0.0"
   },
   "devDependencies": {
     "@babel/runtime-corejs3": "^7.7.7",
-    "core-js": "^3.6.3"
+    "core-js": "^3.6.3",
+    "css-loader": "^3.4.2",
+    "node-sass": "^4.13.0",
+    "sass-loader": "^8.0.1"
   }
 }
