--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@nuxtjs/axios": "^5.3.6",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0",
+    "html5shiv.min.js": "^3.7.2",
     "jquery": "^3.4.1",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "respond.min.js": "^1.4.2"
   },
   "devDependencies": {
     "@babel/runtime-corejs3": "^7.7.7",
+    "@ryancavanaugh/jquery.prettyphoto": "^3.1.14-alpha",
     "core-js": "^3.6.3",
     "css-loader": "^3.4.2",
     "node-sass": "^4.13.0",
